# nowplay-bot

./: .gitignore  Dockerfile  compose.yml  flake.nix  pyproject.toml  success.html
.forgejo/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 04289c560c5c_edit_track_spotify_refreshed_at_to_.py  45a6cad48d51_add_md5_checksum.py  59bdc35f510c_change_creds_storage.py  6c98fbc4386e_init_migrations.py  934c5c1d1f4a_id_from_int_to_bigint.py  9b7a211cc587_id_from_int_to_bigint.py  9f96b664be50_add_default_field.py  d99a58c0c384_edit_track.py  e4a1561c2b63_add_yandex_music_fileds.py  f7473c0d02c7_init_migrations.py  fc8875e47bc0_add_yandex_music_fileds.py
app/: __init__.py  __main__.py  callback_listener.py  config.py  db.py  dependencies.py  sus.py  youtube_api.py
app/MusicProvider/: Context.py  SpotifyStrategy.py  Strategy.py  YMusicStrategy.py  __init__.py  auth.py
app/models/: __init__.py  track.py  user.py
app/static/: authorize_spotify.html  privacy.html
static/: error.html  success.html
